--- a/mp_01/app.json
+++ b/mp_01/app.json
@@ -1,8 +1,8 @@
 {
   "pages": [
     "pages/index/index",
-    "pages/logs/logs",
-    "pages/list/list"
+    "pages/list/list",
+    "pages/logs/logs"
   ],
   "window": {
     "backgroundTextStyle": "light",
